--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -5,12 +5,12 @@ header {
   justify-content: center;
   width: 100%;
 
-  gap: 32px;
+  gap: 2rem;
 }
 
 header .logo-container {
   background: black;
-  padding: 24px;
+  padding: 1.5rem;
   width: 100%;
 
   display: flex;
@@ -32,7 +32,7 @@ header .text-container {
 }
 
 header .text-container h1 {
-  font-size: 34px;
+  font-size: 2.125rem;
   color: var(--dark-grey);
 }
 
